# FI-JEPA

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: base.yaml  benchmark_macro.yaml  benchmark_synthetic.yaml
configs/ablations/: deterministic.yaml  monolithic_predictor.yaml  no_ema.yaml  no_financial_regularizers.yaml  no_multi_horizon.yaml  reconstruction.yaml
experiments/: README.md  publishable_full_seed17.json  publishable_noema_seed17.json  publishable_noreg_seed17.json  results_current_summary.json  results_macro_full_seed17.json  results_macro_full_seed7_current.json  results_macro_full_seed7_new.json  results_macro_noema_seed17.json  results_macro_noema_seed7.json  results_macro_noema_seed7_current.json  results_macro_noreg_seed7.json  results_macro_noreg_seed7_current.json  results_macrodata.json  results_quick_macro_summary.json  results_summary.json  results_synthetic.json  run_check_macro_full_seed7_ep1.json  run_check_macro_noema_seed7_ep1.json  run_check_macro_noreg_seed7_ep1.json
paper/: README.md  arxivrefined.sty  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex
scripts/: benchmark.py  eval.py  make_paper_assets.py  sweep.py  train.py
src/fijepa/: __init__.py  benchmark.py  config.py  data.py  losses.py  memory.py  metrics.py  model.py  trainer.py
tests/: test_model_smoke.py
